# Library_System_Project

./: Book.cpp  Book.h  CMakeLists.txt  Classes.cpp  Classes.h  CustomString.h  DatabaseManager.cpp  DatabaseManager.h  Date.cpp  Date.h  Functionalities.cpp  Functionalities.h  Loan.cpp  Loan.h  README.md  Str.cpp  Str.h  User.cpp  User.h  main.cpp  str.cpp  str.h  tempCodeRunnerFile.cpp
